--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://SyedFaizanJaved.github.io/Foodies-app",
+  "homepage": "https://SyedFaizanJaved.github.io/Foodies-app/",
   "name": "react-website-tut",
   "version": "0.1.0",
   "private": true,
